--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron main.js",
+    "watch": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,13 @@
   },
   "homepage": "https://github.com/atom/electron-quick-start#readme",
   "devDependencies": {
-    "electron-prebuilt": "^0.35.0"
+    "electron-prebuilt": "^0.35.0",
+    "webpack": "^1.12.9"
+  },
+  "dependencies": {
+    "bluebird": "^3.0.6",
+    "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
+    "openpgp": "^1.3.0"
   }
 }
