--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "watch": "webpack --config webpack.config.js"
+    "watch": "webpack --config webpack.config.js",
+    "build": "electron-packager . GPGmail --platform=darwin --arch=x64 --version=0.35.0"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "bluebird": "^3.0.6",
+    "electron-prebuilt": "^0.35.4",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "openpgp": "^1.3.0"
