--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "build-mac": "electron-packager . Modmail --platform=darwin --arch=x64 --version=0.35.4 --icon images/logo.icns",
-    "build-windows": "electron-packager . Modmail --platform=win32 --arch=x64 --version=0.35.4 --icon images/logo.ico",
-    "build-linux": "electron-packager . Modmail --platform=linux --arch=x64 --version=0.35.4"
+    "build-mac": "electron-packager . Modmail --overwrite --platform=darwin --arch=x64 --version=0.35.4 --icon images/logo.icns",
+    "build-windows": "electron-packager . Modmail --overwrite --platform=win32 --arch=x64 --version=0.35.4 --icon images/logo.ico",
+    "build-linux": "electron-packager . Modmail --overwrite --platform=linux --arch=x64 --version=0.35.4"
   },
   "repository": {
     "type": "git",
