--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "build-mac": "electron-packager . Modmail --overwrite --platform=darwin --arch=x64 --version=0.37.2 --icon images/logo.icns",
-    "build-windows": "electron-packager . Modmail --overwrite --platform=win32 --arch=x64 --version=0.37.2 --icon images/logo.ico",
-    "build-linux": "electron-packager . Modmail --overwrite --platform=linux --arch=x64 --version=0.37.2"
+    "build": "node scripts/build.js",
+    "archive": "node scripts/archive.js",
+    "release": "npm run build && npm run archive"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,9 @@
   },
   "homepage": "https://github.com/atom/electron-quick-start#readme",
   "devDependencies": {
+    "archiver": "^0.21.0",
+    "electron-packager": "^5.2.1",
+    "shelljs": "^0.6.0"
   },
   "dependencies": {
     "bluebird": "^3.0.6",
