--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "bluebird": "^3.0.6",
+    "gmail-js": "^0.5.0",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "openpgp": "^1.3.0"
