--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "bluebird": "^3.0.6",
     "electron": "^1.6.2",
+    "gmail-js": "^0.6.10",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "openpgp": "^1.3.0"
