--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modmail-app",
-  "version": "2.3.2",
+  "version": "2.4.0",
   "description": "Extremely moddable Gmail",
   "main": "main.js",
   "scripts": {
@@ -27,12 +27,12 @@
   "homepage": "https://github.com/atom/electron-quick-start#readme",
   "devDependencies": {
     "archiver": "^0.21.0",
-    "electron-packager": "^5.2.1",
+    "electron-packager": "^8.6.0",
     "shelljs": "^0.6.0"
   },
   "dependencies": {
     "bluebird": "^3.0.6",
-    "electron": "^1.6.2",
+    "electron": "1.6.2",
     "gmail-js": "^0.6.10",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
