--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gmail-js": "^0.6.10",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
+    "marked": "^0.3.6",
     "openpgp": "^1.3.0"
   }
 }
